@@ -13,7 +13,7 @@ A::Weight(label=field, value=3).
 \end{screen}
 then the expression~\verb|f{A}{A}| has weight~3. This is what would
 happen if `\verb|f|' would be a sum: the weight of the sum is the same
-as the weight of the terms (and only makes sense if the weight of the
+as the weight of the terms (and is only defined if the weight of the
 all terms is equal).
 
 Multiplicative weight inheritance is used to assign a weight to 
