@@ -142,6 +142,11 @@ std::string WeightInherit::name() const
 	return "WeightInherit";
 	}
 
+WeightInherit::weight_error::weight_error(const std::string& str)
+	: consistency_error(str)
+	{
+	}
+
 bool WeightInherit::parse(exptree& tr, exptree::iterator pat, exptree::iterator prop, keyval_t& kv)
 	{
 	keyval_t::const_iterator tpit=kv.find("type");
@@ -179,7 +184,7 @@ multiplier_t WeightInherit::value(exptree::iterator it, const std::string& force
 						ret=thisone;
 						}
 					else if(ret!=thisone) { // the weights in the sum are not uniform
-						throw consistency_error("Encountered sum with un-equal weight terms.");
+						throw weight_error("Encountered sum with un-equal weight terms.");
 						}
 				  }
 			 }
