@@ -1,3 +1,9 @@
+2009-02-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed handling of (a+b)+(c+d) type expressions in
+	@drop/@keep_weight in which c & d have different weight (leading
+	to an undetermined weight for 'c+d').
+
 2009-02-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Made @canonicalorder and @acanonicalorder act on single-factor
